- prevent garbaging text installer screen (#50776)
- urpmq:
  o -a option was ignored when using --src (fixes #52672)
- urpmi.addmedia:
  o properly expand $RELEASE, $ARCH and $HOST in media URLs (fixes #52276)

Version 6.26.1 - 31 July 2009

-urpmi
  o minor dudf fixes

Version 6.26 - 30 July 2009

- urpmi.addmedia:
  o properly invalidate mirror cache when the distro version changes 
    (ie when product.id changes). Fixes bug #52133, patch from
    Aurélien Lefebvre
- urpmi:
  o allow bash-completion to complete to .spec files as well
  o adjust parsing of aria2 output for aria2 1.4, fixes bug #51354
    (patch from Funda Wang)
  o use urpmi log API for the transaction failed message instead of
    printing it on the console so that installer can save each error
    with each transaction log instead of only having a summary at end
  o inform user when selected packages conflict instead of silently
    dropping one (Anssi Hannula)
  o add optionnal dudf module to send dudf data to the mancoosi
    research project (Olivier Rosello)

Version 6.25.5 - 23 April 2009

- gurpmi:
  o do not advise to restart in --auto mode
  o log bad signatures on stderr

Version 6.25.4 - 20 April 2009

- add NoDisplay=true to gurpmi.desktop

Version 6.25.3 - 18 April 2009

- fix gurpmi.desktop (#50047)

Version 6.25.2 - 15 April 2009

- translation updates

Version 6.25.1 - 31 March 2009

- prevent rpmdrake from crashing (#49354), side effect of #49226 fix

Version 6.25 - 31 March 2009

- downgrade cryptic log message to debug message, fixes #49226
- enable installer to cancel installation

Version 6.24 - 27 March 2009

- return error code when user aborts gurpmi/gurpmi2

Version 6.23 - 25 March 2009

- log user interactions to stdout in gurpmi2
- exit with non 0 error code when failing to add a media, fixes bug #47952
- when using urpme -a, properly report when no packages could be removed,
  fixes bug #48506