@@ -3,6 +3,8 @@
   o -a option was ignored when using --src (fixes #52672)
 - urpmi.addmedia:
   o properly expand $RELEASE, $ARCH and $HOST in media URLs (fixes #52276)
+  o add support for /etc/urpmi/mediacfg.d which stores the media.cfg files 
+    for the media entries in urpmi.cfg
 
 Version 6.26.1 - 31 July 2009
 
